--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -100,3 +100,40 @@ input[type="checkbox"] {
 label {
   font-size: 1.3rem;
 }
+
+
+@media (max-width: 620px) {
+  
+.wrapper {
+  max-width: 460px;
+}
+
+.wrapper h2 {
+  margin-bottom: 1rem;
+  font-size: 1.5rem;
+}
+
+.btn {
+  display: flex;
+  gap: 10px;
+  padding: 11px 65px;
+  font-size: 1rem;
+  border-radius: 5px;
+}
+
+}
+
+@media (max-width: 465px) {
+  .wrapper {
+    max-width: 300px;
+  }
+
+  .contentBtn {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+    gap: 10px;
+    margin: 1rem auto;
+  }
+}
